--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <title>Sign Up</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <img
+        src="images/bruno-guerrero-hVkA2cT7TSQ-unsplash.jpg"
+        alt="A stack of VHS tapes with slightly tattered covers in a room with only light shining through a shutter for illumination."
+      />
+    </div>
+  </body>
 </html>
