add left side of web page
added background image with credit link
added brainmade.org logo and website text

--- a/index.html
+++ b/index.html
@@ -7,11 +7,34 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <img
-        src="images/bruno-guerrero-hVkA2cT7TSQ-unsplash.jpg"
-        alt="A stack of VHS tapes with slightly tattered covers in a room with only light shining through a shutter for illumination."
-      />
+    <div id="left">
+      <div class="container">
+        <img
+          class="back-image"
+          src="images/bruno-guerrero-hVkA2cT7TSQ-unsplash.jpg"
+          alt="A stack of VHS tapes with slightly tattered covers in a room with an evening sun shining through a shutter for illumination."
+        />
+        <div class="logo-container">
+          <img
+            class="logo"
+            src="images/brain-made-white-logo.png"
+            alt="brain made logo and website"
+          />
+        </div>
+        <p class="credit">
+          Photo by
+          <a
+            href="https://unsplash.com/@prey4bokeh?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+            >Bruno Guerrero</a
+          >
+          on
+          <a
+            href="https://unsplash.com/photos/a-wall-full-of-cds-in-a-dark-room-hVkA2cT7TSQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+            >Unsplash</a
+          >
+        </p>
+      </div>
     </div>
+    <div id="right"></div>
   </body>
 </html>
