add explaining paragraph with it's css

--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
         </p>
       </div>
     </div>
-    <div id="right"></div>
+    <div id="right">
+      <div class="one">
+        <p class="speech">
+          This is not a real online service just yet! This was made by a Human
+          <em>not</em> AI. The logo and website on the left show this. It is a
+          project made by the content creator Noboilerplate. Go to the address
+          to see the awesome work they have done. Sign up <em>now</em> to take
+          the red pill.
+        </p>
+        <p class="afterthought">
+          <em>Stay</em> in wonderland, see how <em>far</em> the rabbit hole
+          goes...
+        </p>
+      </div>
+      <div class="two"></div>
+    </div>
   </body>
 </html>
